contrast issues

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,5 +1,5 @@
 :root{
-    --primary-color:#6495ed;
+    --primary-color:#2974ff;
     --bg-color: white;
   --color: #333;
 }
